Introduce testing facilities with the ability to store testing tool configurations per user with name, git tool repo, git commit or branch, additional parameters and a Docker repository for the execution environment. A user can select a subset of the currently used devices, specify the number of tests and parameters and upload one apk or an archive containing apks. The Docker image will be built from the provided Docker repository and the Docker containers will be created with the specified arguments and finally started. The stdout and stderr is messaged in real-time to the frontend. Additionally, the testing facilities provides a job view which lists a users testing jobs with status, time, etc. Furthermore, there is a periodic clean-up for Docker containers, corresponding stored files and db entries.
