# lib/db/api.js
@@ -128,6 +128,94 @@ dbapi.lookupUserByVncAuthResponse = function(response, serial) {
     })
 }
 
+//--------------- Testing Tools of a User
+dbapi.loadUserTestingTools = function(email) {
+  return db.run(r.table('users').get(email).getField('testingTools').default([]))
+}
+
+dbapi.lookupUserTestingToolbyTitle = function(email, name) {
+  return db.run(r.table('users').get(email).getField('testingTools').default([])
+    .filter({title: name}))
+}
+
+dbapi.insertUserTestingTool = function(email, tool) {
+  return db.run(r.table('users').get(email).update({
+    testingTools: r.row('testingTools').default([]).append({
+      title: tool.title
+    , gitRepository: tool.gitRepository
+    , gitCommit: tool.gitCommit
+    , parameters: tool.parameters
+    , dockerRepository: tool.dockerRepository
+    })
+  }))
+}
+
+//--------------- Jobs
+dbapi.loadUserJobs = function(email) {
+  return db.run(r.table('jobs').getAll(email, {
+    index: 'email'
+  }))
+}
+
+dbapi.loadUserJobsByFinishedDate = function(days) {
+  return db.run(r.table('jobs')
+    .filter(r.row('finishedDate').lt(r.now().sub(days * 60 * 60 * 24)).and(r.row('finishedDate').ne(null))))
+}
+
+dbapi.removeUserJobsById = function(ids) {
+  return db.run(r.table('jobs')
+    .getAll(r.args(ids), {index: 'id'})
+    .delete())
+}
+
+dbapi.insertUserJob = function(id, tests, email) {
+  return db.run(r.table('jobs').insert({
+    id: id
+    , startDate: r.now()
+    , finishedDate: null
+    , email: email
+    , testConfig: tests.config.title
+    , containerIds: []
+    , numberOfTotalRuns: tests.runs.length
+    , numberOfSuccessfulRuns: 0
+    , status: 'Runs'
+    , error: null
+  }))
+}
+
+dbapi.updateUserJobStatus = function(id, status, errorMsg) {
+  return db.run(r.table('jobs').get(id).update({
+    status: status
+    , finishedDate: r.now()
+    , error: errorMsg
+  }))
+}
+
+dbapi.updateUserJobRuns = function(id, successful, retry) {
+  if (successful) {
+    return db.run(r.table('jobs').get(id).update({
+      numberOfSuccessfulRuns: r.row('numberOfSuccessfulRuns').add(1)
+    }))
+  }
+  else {
+    if (retry) {
+      return db.run(r.table('jobs').get(id).update({
+        numberOfTotalRuns: r.row('numberOfTotalRuns').add(1)
+      }))
+    }
+  }
+}
+
+dbapi.insertUserJobUsedContainer = function(id, containerId) {
+  return db.run(r.table('jobs').get(id).update({
+    containerIds: r.row('containerIds').append(containerId)
+  }))
+}
+
+dbapi.loadUserJobErrorMessage = function(storageId) {
+  return db.run(r.table('jobs').get(storageId).getField('error'))
+}
+
 //--------------- Device Groups
 dbapi.loadDeviceGroups = function() {
   return db.run(r.table('deviceGroups'))
